<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="20dp" >

    <Button
        android:id="@+id/button_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/to_do_list_demo"/>

    <Button
        android:id="@+id/button_file_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_todo"
        android:layout_centerHorizontal="true"
        android:text="@string/file_api_demo" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_file_sample"
        android:text="@string/logout" />

</RelativeLayout>