<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/textView_tital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:text="@string/list_view_tital"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/list_view_strik_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newlayout"
        android:layout_below="@id/textView_tital"
        android:background="@drawable/rectangel"
        android:scrollbars="none"
        android:padding="1.5dp"/>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/newlayout"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_item" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/newlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_button"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <EditText
            android:id="@+id/editText_add_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnrectangel"
            android:hint="@string/add_item"
            android:minHeight="40dp"
            android:inputType="textNoSuggestions"
            android:maxLines="1" />
    </RelativeLayout>

    <ImageView 
        android:id="@+id/downloadedImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        />
    
</RelativeLayout>